# replace-text

./: README.md  pyproject.toml  replace-text  setup.py
replace-text/: replace-text.py
replace_text/: __init__.py  replace_text.py
