[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "replace-text"
version = 0.01
description = "Replace text in files(s) or stdin."
authors = [
    { name = "jakeogh", email = "github.com@v6y.net" },
]
dependencies = [
    "pathtool @ git+https://git@github.com/jakeogh/pathtool",
    "asserttool @ git+https://git@github.com/jakeogh/asserttool",
    "clicktool @ git+https://git@github.com/jakeogh/clicktool",
    "mptool @ git+https://git@github.com/jakeogh/mptool",
]
requires-python = ">=3.11"

[project.readme]
text = "\nreplace-text - Replace text in files(s) or stdin.\n"
content-type = "text/plain"

[project.license]
text = "PUBLIC DOMAIN"

[project.urls]
Homepage = "https://github.com/jakeogh/replace-text"

[project.scripts]
replace-text = "replace_text.replace_text:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false
